fixing wrapping issues in Firefox/IE/Edge

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -49,6 +49,8 @@ pre {
 
     .profile-links-container {
         margin-top: 5px;
+        margin-left: -3px;
+        margin-right: -3px;
 
         a {
             padding: 6px;
